--- a/src/blocks/UserProfile/locales/kk.json
+++ b/src/blocks/UserProfile/locales/kk.json
@@ -11,5 +11,7 @@
   "privacy_policy_button_label": "Құпиялық саясаты",
   "FAQ_button_label": "Жиі қойылатын сұрақтар",
   "mood_tracker_button_label": "Көңіл-күй трекері",
-  "payments_history_button_label": "Төлем тарихы"
+  "payments_history_button_label": "Төлем тарихы",
+  "terms_of_use": "Пайдалану шарттары",
+  "cookie_policy": "Cookie саясаты"
 }
