Add: missing "free" translation in the Consultations block

--- a/src/blocks/Consultations/locales/en.json
+++ b/src/blocks/Consultations/locales/en.json
@@ -23,5 +23,6 @@
   "suggested": "Suggested",
   "view_profile": "View personal profile",
   "conducted": "Consultation ended",
-  "not_conducted": "Not conducted"
+  "not_conducted": "Not conducted",
+  "free": "Free"
 }
