--- a/src/blocks/Consultations/locales/kk.json
+++ b/src/blocks/Consultations/locales/kk.json
@@ -23,5 +23,6 @@
   "suggested": "Ұсынылды",
   "view_profile": "Жеке парақшаны қарап шығу",
   "conducted": "Консультация аяқталды",
-  "not_conducted": "Өткізілмеді"
+  "not_conducted": "Өткізілмеді",
+  "free": "Тегін"
 }
