--- a/src/blocks/Consultations/locales/ru.json
+++ b/src/blocks/Consultations/locales/ru.json
@@ -23,5 +23,6 @@
   "suggested": "Предложено",
   "view_profile": "Просмотреть личный профиль",
   "conducted": "Консультация завершена",
-  "not_conducted": "Не проводилась"
+  "not_conducted": "Не проводилась",
+  "free": "Бесплатно"
 }
