Add: missing translations in ContactUs block

--- a/src/blocks/ContactUs/locales/en.json
+++ b/src/blocks/ContactUs/locales/en.json
@@ -15,5 +15,6 @@
   "contact_reason_1": "What is this platform about?",
   "contact_reason_2": "I need more info about the services provided through the platform",
   "contact_reason_3": "I am a client and I am experiencing a technical problem",
-  "contact_reason_4": "Something else"
+  "contact_reason_4": "Something else",
+  "contact_form": "Contact form"
 }
