--- a/src/blocks/ContactUs/locales/kk.json
+++ b/src/blocks/ContactUs/locales/kk.json
@@ -15,5 +15,6 @@
   "contact_reason_1": "Бұл платформа не туралы?",
   "contact_reason_2": "Маған бұл платформа арқылы көрсетілетін қызметтер туралы көбірек ақпарат қажет",
   "contact_reason_3": "Мен клиентпін және техникалық мәселе туындады",
-  "contact_reason_4": "Басқа"
+  "contact_reason_4": "Басқа",
+  "contact_form": "Contact form"
 }
