--- a/src/blocks/ContactUs/locales/ru.json
+++ b/src/blocks/ContactUs/locales/ru.json
@@ -15,5 +15,6 @@
   "contact_reason_1": "О чем эта платформа?",
   "contact_reason_2": "Мне нужно больше информации об услугах, предоставляемых через эту платформу",
   "contact_reason_3": "Я клиент, и у меня возникла техническая проблема",
-  "contact_reason_4": "Прочее"
+  "contact_reason_4": "Прочее",
+  "contact_form": "Contact form"
 }
