--- a/src/modals/MoodTrackMoreInformation/locales/en.json
+++ b/src/modals/MoodTrackMoreInformation/locales/en.json
@@ -4,5 +4,17 @@
   "ordinal_st": "st",
   "ordinal_nd": "nd",
   "ordinal_rd": "rd",
-  "ordinal_th": "th"
+  "ordinal_th": "th",
+   "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December"
 }
