--- a/src/modals/MoodTrackMoreInformation/locales/kk.json
+++ b/src/modals/MoodTrackMoreInformation/locales/kk.json
@@ -4,5 +4,17 @@
   "ordinal_st": "-ші",
   "ordinal_nd": "-ші",
   "ordinal_rd": "-ші",
-  "ordinal_th": "-ші/-шы"
+  "ordinal_th": "-ші/-шы",
+   "january": "Қаңтар",
+  "february": "Ақпан",
+  "march": "Наурыз",
+  "april": "Сәуір",
+  "may": "Мамыр",
+  "june": "Маусым",
+  "july": "Шілде",
+  "august": "Тамыз",
+  "september": "Қыркүйек",
+  "october": "Қазан",
+  "november": "Қараша",
+  "december": "Желтоқсан"
 }
