--- a/src/modals/MoodTrackMoreInformation/locales/ru.json
+++ b/src/modals/MoodTrackMoreInformation/locales/ru.json
@@ -4,5 +4,17 @@
   "ordinal_st": "-ый",
   "ordinal_nd": "-ой",
   "ordinal_rd": "-ий",
-  "ordinal_th": "-ый"
+  "ordinal_th": "-ый",
+   "january": "Январь",
+  "february": "Февраль",
+  "march": "Март",
+  "april": "Апрель",
+  "may": "Май",
+  "june": "Июнь",
+  "july": "Июль",
+  "august": "Август",
+  "september": "Сентябрь",
+  "october": "Октябрь",
+  "november": "Ноябрь",
+  "december": "Декабрь"
 }
