Refactor: show different text if a consultation is booked with coupon

--- a/src/backdrops/CancelConsultation/locales/ru.json
+++ b/src/backdrops/CancelConsultation/locales/ru.json
@@ -12,5 +12,6 @@
   "thursday": "Чт",
   "friday": "Пт",
   "saturday": "Сб",
-  "free": "Свободно"
+  "free": "Свободно",
+  "coupon": "CouponRU"
 }
