--- a/src/blocks/Consultations/locales/en.json
+++ b/src/blocks/Consultations/locales/en.json
@@ -24,5 +24,6 @@
   "view_profile": "View personal profile",
   "conducted": "Consultation ended",
   "not_conducted": "Not conducted",
-  "free": "Free"
+  "free": "Free",
+  "coupon": "Coupon"
 }
