--- a/src/blocks/Consultations/locales/kk.json
+++ b/src/blocks/Consultations/locales/kk.json
@@ -24,5 +24,6 @@
   "view_profile": "Жеке парақшаны қарап шығу",
   "conducted": "Консультация аяқталды",
   "not_conducted": "Өткізілмеді",
-  "free": "Тегін"
+  "free": "Тегін",
+  "coupon": "CouponKK"
 }
