--- a/src/blocks/Consultations/locales/ru.json
+++ b/src/blocks/Consultations/locales/ru.json
@@ -24,5 +24,6 @@
   "view_profile": "Просмотреть личный профиль",
   "conducted": "Консультация завершена",
   "not_conducted": "Не проводилась",
-  "free": "Бесплатно"
+  "free": "Бесплатно",
+  "coupon": "CouponRU"
 }
