--- a/src/blocks/MascotWelcomeHeader/locales/kk.json
+++ b/src/blocks/MascotWelcomeHeader/locales/kk.json
@@ -26,5 +26,6 @@
   "september": "September",
   "october": "October",
   "november": "November",
-  "december": "December"
+  "december": "December",
+  "coupon": "CouponKK"
 }
