--- a/src/blocks/MascotWelcomeHeader/locales/ru.json
+++ b/src/blocks/MascotWelcomeHeader/locales/ru.json
@@ -26,5 +26,6 @@
   "september": "Сентябрь",
   "october": "Октябрь",
   "november": "Ноябрь",
-  "december": "Декабрь"
+  "december": "Декабрь",
+  "coupon": "CouponRU"
 }
