--- a/src/blocks/SelectProvider/locales/en.json
+++ b/src/blocks/SelectProvider/locales/en.json
@@ -3,5 +3,6 @@
   "psychiatrist": "Psychiatrist",
   "psychotherapist": "Psychotherapist",
   "no_match": "No providers matching your criteria",
-  "free": "Free"
+  "free": "Free",
+  "coupon": "Coupon"
 }
