--- a/src/blocks/SelectProvider/locales/kk.json
+++ b/src/blocks/SelectProvider/locales/kk.json
@@ -3,5 +3,6 @@
   "psychiatrist": "Психиатр",
   "psychotherapist": "Психотерапевт",
   "no_match": "Талаптарыңызға сай келетін консультанттар жоқ",
-  "free": "Бос"
+  "free": "Бос",
+  "coupon": "CouponKK"
 }
