--- a/src/blocks/SelectProvider/locales/ru.json
+++ b/src/blocks/SelectProvider/locales/ru.json
@@ -3,5 +3,6 @@
   "psychiatrist": "Психиатр",
   "psychotherapist": "Психотерапевт",
   "no_match": "Нет консультантов, соответствующих Вашим критериям",
-  "free": "Свободно"
+  "free": "Свободно",
+  "coupon": "CouponRU"
 }
