--- a/src/blocks/MoodTrackHistory/locales/ru.json
+++ b/src/blocks/MoodTrackHistory/locales/ru.json
@@ -1,16 +1,9 @@
 {
-  "sunday": "Вс",
-  "monday": "Пн",
-  "tuesday": "Вт",
-  "wednesday": "Ср",
-  "thursday": "Чт",
-  "friday": "Пт",
-  "saturday": "Сб",
   "happy": "Отлично",
-  "good": "Счастливый",
-  "sad": "Грустный",
+  "good": "Счастливо",
+  "sad": "Грустно",
   "depressed": "В депрессии",
-  "worried": "Взволнованный",
-  "overall_mood": "Ваше общее настроение на текущую неделю",
-  "view_more": "Посмотреть больше"
+  "worried": "Взволнованно",
+  "you_felt": "Вы почувствовали",
+  "comment_text": "и Вы прокомментировали:"
 }
