--- a/src/blocks/MoodTrackHistory/locales/en.json
+++ b/src/blocks/MoodTrackHistory/locales/en.json
@@ -1,10 +1,10 @@
 {
-  "saturday": "Sat",
   "happy": "Perfect",
   "good": "Happy",
   "sad": "Sad",
   "depressed": "Depressed",
   "worried": "Worried",
   "you_felt": "You felt",
-  "comment_text": "and you commented:"
+  "comment_text": "and you commented:",
+  "no_result": "No results found."
 }
