--- a/src/blocks/MoodTrackHistory/locales/ru.json
+++ b/src/blocks/MoodTrackHistory/locales/ru.json
@@ -5,5 +5,6 @@
   "depressed": "В депрессии",
   "worried": "Взволнованно",
   "you_felt": "Вы почувствовали",
-  "comment_text": "и Вы прокомментировали:"
+  "comment_text": "и Вы прокомментировали:",
+  "no_result": "Ничего не нашлось"
 }
