Add: translations in the MascotHeaderQaa block

--- a/src/blocks/MascotHeaderQAA/locales/kk.json
+++ b/src/blocks/MascotHeaderQAA/locales/kk.json
@@ -1,5 +1,5 @@
 {
-    "heading": "My Q&A",
+    "heading": "My Q&A KK",
     "subheading_its": "It`s",
     "subheading_anonymous": "ANONYMOUS",
     "subheading_text1": "Your questions are",
