Add: missing translation in GiveSuggestion component

--- a/src/blocks/GiveSuggestion/locales/kk.json
+++ b/src/blocks/GiveSuggestion/locales/kk.json
@@ -6,5 +6,7 @@
 
   "modal_title": "Ұсыныс сәтті жіберілді",
   "modal_text": "Іздегеніңізді таба алмағаныңызға қатты өкінеміз. Біз Сіздің ұсынысыңызды мүмкіндігінше тезірек қарастыруға тырысамыз. Пікіріңізге рахмет.",
-  "modal_cta_label": "Басқа мақалалармен танысып шығыңыз"
+  "modal_cta_label": "Басқа мақалалармен танысып шығыңыз",
+
+  "error": "Please enter your sugestion"
 }
