--- a/src/blocks/GiveSuggestion/locales/en.json
+++ b/src/blocks/GiveSuggestion/locales/en.json
@@ -6,5 +6,7 @@
 
   "modal_title": "Suggestion submited successfully",
   "modal_text": "We are really sorry you could not find what you were loooking for. We will try to address your suggestion as soon as possible. Thank you for your feedback.",
-  "modal_cta_label": "Explore more articles"
+  "modal_cta_label": "Explore more articles",
+
+  "error": "Please enter your sugestion"
 }
