--- a/src/blocks/GiveSuggestion/locales/ru.json
+++ b/src/blocks/GiveSuggestion/locales/ru.json
@@ -6,5 +6,8 @@
 
   "modal_title": "Предложение отправлено успешно",
   "modal_text": "Нам очень жаль, что Вы не смогли найти то, что искали. Мы постараемся рассмотреть Ваше предложение как можно скорее. Спасибо за обратную связь.",
-  "modal_cta_label": "Ознакомьтесь с другими статьями"
+  "modal_cta_label": "Ознакомьтесь с другими статьями",
+
+  "error": "Please enter your sugestion"
+  
 }
