Refactor: the way of filtering questions

--- a/src/blocks/MyQA/locales/en.json
+++ b/src/blocks/MyQA/locales/en.json
@@ -1,15 +1,16 @@
 {
-    "ask_button_label": "Ask anonymously",
-    "answer_by": "Answer by:",
-    "schedule_consultation": "Schedule consultation",
-    "today": "Today",
-    "archive": "Archive",
-    "respond": "Respond",
-    "read_more": "Read more",
-    "all": "All",
-    "most_popular": "Most Popular",
-    "newest": "Newest",
-    "your_questions": "Your Questions",
-    "search_placeholder": "Search",
-    "filter": "Filter tags"
+  "ask_button_label": "Ask anonymously",
+  "answer_by": "Answer by:",
+  "schedule_consultation": "Schedule consultation",
+  "today": "Today",
+  "archive": "Archive",
+  "respond": "Respond",
+  "read_more": "Read more",
+  "all": "All",
+  "most_popular": "Most Popular",
+  "newest": "Newest",
+  "your_questions": "Your Questions",
+  "search_placeholder": "Search",
+  "filter": "Filter tags",
+  "no_questions_found": "No questions found"
 }
