--- a/src/blocks/RegisterAnonymous/locales/en.json
+++ b/src/blocks/RegisterAnonymous/locales/en.json
@@ -11,5 +11,6 @@
   "password_error": "Password should contain at least 8 characters, 1 uppercase letter, 1 lowercase letter and 1 number",
   "register_button_label": "Register",
   "login_button_label": "I already have an account",
-  "copy_text": "Copy and save or write down your anonymous code, if you lose it you cannot get access to your account anymore"
+  "copy_text": "Copy and save or write down your anonymous code, if you lose it you cannot get access to your account anymore",
+  "copy_success": "Code copied successfully"
 }
