--- a/src/blocks/RegisterAnonymous/locales/kk.json
+++ b/src/blocks/RegisterAnonymous/locales/kk.json
@@ -11,5 +11,6 @@
   "password_error": "Кілтсөз кемінде 8 таңбадан, 1 бас әріптен, 1 кіші әріптен және 1 саннан тұруы керек.",
   "register_button_label": "Тіркелу",
   "login_button_label": "Менің аккаунтым бар",
-  "copy_text": "Анонимді кодты көшіріп алып, сақтап қойыңыз немесе жазып алыңыз, егер оны жоғалтып алсаңыз, аккаунтыңызға кіре алмайсыз."
+  "copy_text": "Анонимді кодты көшіріп алып, сақтап қойыңыз немесе жазып алыңыз, егер оны жоғалтып алсаңыз, аккаунтыңызға кіре алмайсыз.",
+  "copy_success": "Сәтті көшірілген код"
 }
