Add: MyQA tab in the navbar

--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -2,6 +2,7 @@
   "page_1": "Home",
   "page_2": "Consultations",
   "page_3": "Information portal",
+  "page_4": "My Q&A",
 
   "footer_1": "Home",
   "footer_2": "Consultations",
