--- a/src/blocks/Page/locales/kk.json
+++ b/src/blocks/Page/locales/kk.json
@@ -2,6 +2,7 @@
   "page_1": "Бас бет",
   "page_2": "Консультациялар",
   "page_3": "Ақпараттық портал",
+  "page_4": "My Q&A",
 
   "footer_1": "Бас бет",
   "footer_2": "Консультациялар",
