--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -2,6 +2,7 @@
   "page_1": "Главная страница",
   "page_2": "Консультации",
   "page_3": "Информационный портал",
+  "page_4": "My Q&A",
 
   "footer_1": "Главная страница",
   "footer_2": "Консультации",
