Fix: change translation

--- a/src/blocks/MyQA/locales/en.json
+++ b/src/blocks/MyQA/locales/en.json
@@ -12,5 +12,5 @@
   "your_questions": "Your Questions",
   "search_placeholder": "Search",
   "filter": "Filter tags",
-  "no_questions_found": "No questions found"
+  "no_answers_found": "There are no answered questions"
 }
