--- a/src/blocks/MyQA/locales/kk.json
+++ b/src/blocks/MyQA/locales/kk.json
@@ -10,5 +10,5 @@
   "most_popular": "Ең танымал",
   "newest": "Newest",
   "your_questions": "Your Questions",
-  "no_questions_found": "No questions foundKK"
+  "no_answers_found": "There are no answered questionsKK"
 }
