--- a/src/blocks/MyQA/locales/ru.json
+++ b/src/blocks/MyQA/locales/ru.json
@@ -10,5 +10,5 @@
   "most_popular": "Самые популярные",
   "newest": "Newest",
   "your_questions": "Your Questions",
-  "no_questions_found": "No questions foundRU"
+  "no_answers_found": "There are no answered questionsRU"
 }
