Add: missing translation in the Tabs component in the Articles and ArticlesDashboard

--- a/src/blocks/Articles/locales/en.json
+++ b/src/blocks/Articles/locales/en.json
@@ -4,6 +4,7 @@
   "could_not_load_content": "There are no results for the current selected country and language.",
   "all": "All",
   "read_more_button": "Read more",
-  "min_read":	"min read",
-  "by": "By {{creator}}"
+  "min_read": "min read",
+  "by": "By {{creator}}",
+  "number_of_more_options": "{{count}} more"
 }
