--- a/src/blocks/RegisterPreview/locales/ru.json
+++ b/src/blocks/RegisterPreview/locales/ru.json
@@ -7,5 +7,6 @@
   "heading_2": "About the support",
   "text_2": "USupport provides personalized, discreet and fast psychological care for your overall well-being.",
   "heading_3": "About you",
-  "text_3": "Your story matters! Dare to share it."
+  "text_3": "Your story matters! Dare to share it.",
+  "login": "Войти в приложение"
 }
