--- a/src/pages/Notifications/locales/en.json
+++ b/src/pages/Notifications/locales/en.json
@@ -1,1 +1,5 @@
-{}
+{
+    "heading": "Notifications",
+    "mark_read": "Mark all as read",
+    "subheading": "Here you can find all the notifications you ever received in your account."
+}
