--- a/src/blocks/NotificationPreferences/locales/ru.json
+++ b/src/blocks/NotificationPreferences/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "email": "Уведомления по электронной почте",
   "appointment": "Уведомления о встречах",
-  "minutes_before": "минут до"
+  "minutes_before": "минут до",
+  "success": "Settings saved successfullyRU"
 }
