--- a/src/backdrops/ChangePassword/locales/en.json
+++ b/src/backdrops/ChangePassword/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Reset your password",
+  "heading": "Change your password",
   "current_password": "Current password",
   "new_password": "New password",
   "button_label": "Reset",
