--- a/src/blocks/ForgotPassword/locales/kk.json
+++ b/src/blocks/ForgotPassword/locales/kk.json
@@ -4,5 +4,5 @@
   "reset_password_button_label": "Кілтсөзді өзгерту",
   "register_redirect_button_label": "Менде аккаунт жоқ",
   "modal_heading": "Электронды поштаңызды тексеріңіз",
-  "modal_text": "Біз Сізге кілтсөзді өзгерту сілтемесі бар электронды хат жібердік."
+  "modal_text": "If you are registered in the platform you will receive a link to reset your password.KK"
 }
