--- a/src/modals/RequireDataAgreement/locales/ru.json
+++ b/src/modals/RequireDataAgreement/locales/ru.json
@@ -4,5 +4,6 @@
   "text2": "Прежде чем давать разрешение, Вы можете ознакомиться с ",
   "terms": "Условия и положения",
   "give_permission": "Дать разрешение",
+  "privacy_policy": "Политика конфиденциальности",
   "cancel": "Отмена"
 }
