--- a/src/backdrops/FilterProviders/locales/kk.json
+++ b/src/backdrops/FilterProviders/locales/kk.json
@@ -14,5 +14,6 @@
   "language": "Тіл",
   "language_placeholder": "Тілді таңдаңыз",
   "providers_free_consultation_label": "Тек тегін консультация",
-  "button_label": "Сақтау"
+  "button_label": "Сүзгілерді қолданыңыз",
+  "reset_filter": "Сүзгілерді қалпына келтіру"
 }
