--- a/src/modals/RequireDataAgreement/locales/en.json
+++ b/src/modals/RequireDataAgreement/locales/en.json
@@ -3,6 +3,7 @@
   "text": "Your personal information will not be exposed, this permission will be used only for medical data and chat history to be proccesed and stored in the platform.",
   "text2": "Before giving permission you can read our ",
   "terms": "Terms and conditions.",
+  "privacy_policy": "Privacy policy",
   "give_permission": "Give permission",
   "cancel": "Cancel"
 }
