--- a/src/modals/RequireDataAgreement/locales/kk.json
+++ b/src/modals/RequireDataAgreement/locales/kk.json
@@ -3,6 +3,7 @@
   "text": "Сіздің жеке ақпаратыңыз ашылмайды, бұл рұқсат тек клиникалық деректер және чат тарихында өңдеу және сақтау үшін платформада пайдаланылады.",
   "text2": "Рұқсат бермес бұрын, Сіз таныса алатын ",
   "terms": "Шарттар мен ережелер",
+  "privacy_policy": "Құпиялық саясаты",
   "give_permission": "Рұқсат беру",
   "cancel": "Болдырмау"
 }
