--- a/src/modals/RequireDataAgreement/locales/en.json
+++ b/src/modals/RequireDataAgreement/locales/en.json
@@ -1,7 +1,7 @@
 {
   "heading": "Do you give us permission to process your personal data?",
   "text": "Your personal information will not be exposed, this permission will be used only for medical data and chat history to be proccesed and stored in the platform.",
-  "text2": "Before giving permission you can read our ",
+  "text2": "If you would like to learn more about how we process personal data, please visit our ",
   "terms": "Terms and conditions.",
   "privacy_policy": "Privacy policy",
   "give_permission": "Give permission",
