Add: missing translations

--- a/src/blocks/Consultations/locales/kk.json
+++ b/src/blocks/Consultations/locales/kk.json
@@ -25,5 +25,5 @@
   "conducted": "Консультация аяқталды",
   "not_conducted": "Өткізілмеді",
   "free": "Тегін",
-  "coupon": "CouponKK"
+  "coupon": "Купон"
 }
