--- a/src/blocks/Consultations/locales/ru.json
+++ b/src/blocks/Consultations/locales/ru.json
@@ -25,5 +25,5 @@
   "conducted": "Консультация завершена",
   "not_conducted": "Не проводилась",
   "free": "Бесплатно",
-  "coupon": "CouponRU"
+  "coupon": "Купон"
 }
