--- a/src/blocks/ContactUs/locales/ru.json
+++ b/src/blocks/ContactUs/locales/ru.json
@@ -16,5 +16,5 @@
   "contact_reason_2": "Мне нужно больше информации об услугах, предоставляемых через эту платформу",
   "contact_reason_3": "Я клиент, и у меня возникла техническая проблема",
   "contact_reason_4": "Прочее",
-  "contact_form": "Contact form"
+  "contact_form": "Контактная форма"
 }
