--- a/src/blocks/MascotWelcomeHeader/locales/kk.json
+++ b/src/blocks/MascotWelcomeHeader/locales/kk.json
@@ -15,17 +15,17 @@
   "ordinal_nd": "-ші",
   "ordinal_rd": "-ші",
   "ordinal_th": "-ші/-шы",
-  "january": "January",
-  "february": "February",
-  "march": "March",
-  "april": "April",
-  "may": "May",
-  "june": "June",
-  "july": "July",
-  "august": "August",
-  "september": "September",
-  "october": "October",
-  "november": "November",
-  "december": "December",
-  "coupon": "CouponKK"
+  "january": "қаңтар",
+  "february": "ақпан",
+  "march": "наурыз",
+  "april": "сәуір",
+  "may": "мамыр",
+  "june": "маусым",
+  "july": "шілде",
+  "august": "тамыз",
+  "september": "қыркүйек",
+  "october": "қазан",
+  "november": "қараша",
+  "december": "желтоқсан",
+  "coupon": "Купон"
 }
