--- a/src/blocks/SelectProvider/locales/kk.json
+++ b/src/blocks/SelectProvider/locales/kk.json
@@ -4,5 +4,5 @@
   "psychotherapist": "Психотерапевт",
   "no_match": "Талаптарыңызға сай келетін консультанттар жоқ",
   "free": "Бос",
-  "coupon": "CouponKK"
+  "coupon": "Купон"
 }
