--- a/src/modals/SaveAccessCodeConfirmation/locales/kk.json
+++ b/src/modals/SaveAccessCodeConfirmation/locales/kk.json
@@ -2,6 +2,6 @@
   "heading": "Кіру кодын сақтап қойғаныңызды растаңыз",
   "text": "Кіру кодын сақтап қойғаныңызға немесе жазып алғаныңызға көз жеткізіңіз. Әйтпесе, анонимді аккаунтыңызға кіру және қосымшадағы жетістіктеріңізді көру мүмкіндігінен айырыласыз.",
   "button": "Мен кіру кодын сақтап қойдым",
-  "warning": "I understand, that i will not have access to the account if i lose this code",
-  "click_to_copy": "Click to copyKK"
+  "warning": "Егер мен бұл кодты жоғалтсам, аккаунтқа қол жеткізе алмайтынымды түсінемін",
+  "click_to_copy": "Көшіру үшін басыңыз"
 }
