--- a/src/pages/ArticleInformation/locales/kk.json
+++ b/src/pages/ArticleInformation/locales/kk.json
@@ -3,5 +3,5 @@
   "no_results": "Таңдалған тілде ұқсас мақалалар жоқ.",
   "read_more_button": "Read more",
   "min_read":	"min read",
-  "by": "by {{creator}}"
+  "by": "Дайындаушы {{creator}}"
 }
