--- a/src/pages/ArticleInformation/locales/ru.json
+++ b/src/pages/ArticleInformation/locales/ru.json
@@ -3,5 +3,5 @@
   "no_results": "На выбранном языке нет похожих статей.",
   "read_more_button": "Read more",
   "min_read":	"min read",
-  "by": "by {{creator}}"
+  "by": "От {{creator}}"
 }
