--- a/src/pages/MyQA/locales/ru.json
+++ b/src/pages/MyQA/locales/ru.json
@@ -1,6 +1,6 @@
 {
     "all": "Все",
     "most_popular": "Самые популярные",
-    "newest": "Newest",
-    "your_questions": "Your Questions"
+    "newest": "Новые",
+    "your_questions": "Ваш вопрос"
 }
