--- a/src/backdrops/FilterQuestions/locales/kk.json
+++ b/src/backdrops/FilterQuestions/locales/kk.json
@@ -1,5 +1,6 @@
 {
-    "heading": "Filter questions by tag",
-    "dropdown_label": "Select a tag",
-    "cta_label": "Сақтау"
+    "heading": "Тег бойынша сұрағыңызды сүзгіден өткізіңіз",
+    "dropdown_label": "Тегті таңдаңыз",
+    "cta_label": "Сүзгілерді қолданыңыз",
+    "secondary_cta_label": "Сүзгілерді қалпына келтіру"
 }
