--- a/src/blocks/MascotWelcomeHeader/locales/ru.json
+++ b/src/blocks/MascotWelcomeHeader/locales/ru.json
@@ -15,17 +15,17 @@
   "ordinal_nd": "-ой",
   "ordinal_rd": "-ий",
   "ordinal_th": "-ый",
-  "january": "Январь",
-  "february": "Февраль",
-  "march": "Март",
-  "april": "Апрель",
-  "may": "Май",
-  "june": "Июнь",
-  "july": "Июль",
-  "august": "Август",
-  "september": "Сентябрь",
-  "october": "Октябрь",
-  "november": "Ноябрь",
-  "december": "Декабрь",
-  "coupon": "CouponRU"
+  "january": "январь",
+  "february": "февраль",
+  "march": "март",
+  "april": "апрель",
+  "may": "май",
+  "june": "июнь",
+  "july": "июль",
+  "august": "август",
+  "september": "сентябрь",
+  "october": "октябрь",
+  "november": "ноябрь",
+  "december": "декабрь",
+  "coupon": "Купон"
 }
