--- a/src/blocks/MyQA/locales/kk.json
+++ b/src/blocks/MyQA/locales/kk.json
@@ -1,14 +1,16 @@
 {
-  "ask_button_label": "Ask anonymously",
-  "answer_by": "Answered by:",
+  "ask_button_label": "Анонимді сұрау",
+  "answer_by": "Жауап берді:",
   "schedule_consultation": "Консультацияны жоспарлау",
-  "today": "Today",
-  "archive": "Archive",
-  "respond": "Respond",
+  "today": "Бүгін",
+  "archive": "Мұрағат",
+  "respond": "Жауап беру",
   "read_more": "Ары қарай оқу",
   "all": "Барлығы",
   "most_popular": "Ең танымал",
-  "newest": "Newest",
-  "your_questions": "Your Questions",
-  "no_answers_found": "There are no answered questionsKK"
+  "newest": "Жаңа",
+  "your_questions": "Сіздің сұрағыңыз",
+  "search_placeholder": "Іздеу",
+  "filter": "Тегтерді сүзгілеу",
+  "no_answers_found": "Сұрақтарға жауап жоқ"
 }
