--- a/src/blocks/Notifications/locales/kk.json
+++ b/src/blocks/Notifications/locales/kk.json
@@ -9,7 +9,7 @@
   "consultation_suggestion": "<0>{{providerName}}</0> <0>{{date}}</0> күні <0>{{startHour}}</0> бастап <0>{{endHour}}</0> дейін консультация беруді ұсынды",
   "consultation_suggestion_booking": "Сіз <0>{{providerName}}</0> ұсынған <0>{{date}}</0> күнгі <0>{{startHour}}</0> бастап <0>{{endHour}}</0> дейін берілетін консультацияны қабылдадыңыз",
   "consultation_suggestion_cancellation": "Сіз <0>{{providerName}}</0> ұсынған <0>{{date}}</0> күнгі <0>{{startHour}}</0> бастап <0>{{endHour}}</0> дейін берілетін консультациядан бас тарттыңыз.",
-  "consultation_started": "Your consultation with provider <0>{{providerName}}</0> startedKK",
+  "consultation_started": "Сіздің {{providerName}} консультантпен консультацияңыз басталды",
   "join": "Қосылу",
   "accept": "Қабылдау",
   "accept_consultation_success": "Консультация сәтті қабылданды",
