--- a/src/blocks/SelectProvider/locales/ru.json
+++ b/src/blocks/SelectProvider/locales/ru.json
@@ -4,5 +4,5 @@
   "psychotherapist": "Психотерапевт",
   "no_match": "Нет консультантов, соответствующих Вашим критериям",
   "free": "Свободно",
-  "coupon": "CouponRU"
+  "coupon": "Купон"
 }
