--- a/src/pages/InformationPortal/locales/kk.json
+++ b/src/pages/InformationPortal/locales/kk.json
@@ -7,5 +7,5 @@
   "view_all": "Барлығын көру",
   "read_more_button": "Ары қарай оқу",
   "min_read": "минут оқуға",
-  "by": "By {{creator}}"
+  "by": "Дайындаушы {{creator}}"
 }
