--- a/src/pages/MyQA/locales/kk.json
+++ b/src/pages/MyQA/locales/kk.json
@@ -1,6 +1,6 @@
 {
     "all": "Барлығы",
     "most_popular": "Ең танымал",
-    "newest": "Newest",
-    "your_questions": "Your Questions"
+    "newest": "Жаңа",
+    "your_questions": "Сіздің сұрағыңыз"
 }
