--- a/src/backdrops/ChangePassword/locales/kk.json
+++ b/src/backdrops/ChangePassword/locales/kk.json
@@ -3,5 +3,8 @@
   "current_password": "Қазіргі кілтсөз",
   "new_password": "Жаңа пароль",
   "button_label": "Баптауларды өзгерту",
-  "password_error": "Кілтсөз кемінде 8 таңбадан, 1 бас әріптен, 1 кіші әріптен және 1 саннан тұруы керек."
+  "password_error": "Кілтсөз кемінде 8 таңбадан, 1 бас әріптен, 1 кіші әріптен және 1 саннан тұруы керек.",
+  "success": "Кілтсөз сәтті өзгертілді.",
+  "confirm_password": "Confirm passwordKK",
+  "password_match_error": "The New password and Confirm Password fields do not matchKK"
 }
