--- a/src/blocks/PaymentHistory/locales/en.json
+++ b/src/blocks/PaymentHistory/locales/en.json
@@ -4,5 +4,6 @@
   "date_of_payment": "Date of payment",
   "more_details": "More details",
   "no_payments_history_found": "You don't have any payments history yet",
-  "text_audio_video_consultation": "Online consultation"
+  "text_audio_video_consultation": "Online consultation",
+  "export_label": "Export"
 }
