--- a/src/blocks/PaymentHistory/locales/ru.json
+++ b/src/blocks/PaymentHistory/locales/ru.json
@@ -4,5 +4,6 @@
   "date_of_payment": "Дата платежа",
   "more_details": "Более подробная информация",
   "no_payments_history_found": "У Вас еще нет истории платежей",
-  "text_audio_video_consultation": "Онлайн консультации"
+  "text_audio_video_consultation": "Онлайн консультации",
+  "export_label": "Экспорт"
 }
