--- a/src/blocks/UserProfile/locales/en.json
+++ b/src/blocks/UserProfile/locales/en.json
@@ -2,7 +2,7 @@
   "your_profile": "Your profile",
   "guest": "Guest",
   "application_settings": "Application settings",
-  "rate_share": "Rate and share",
+  "rate_share": "Rate",
   "other": "Other",
   "notifications_settings_button_label": "Notification settings",
   "rate_us_button_label": "Give us a rating",
