--- a/src/blocks/UserProfile/locales/kk.json
+++ b/src/blocks/UserProfile/locales/kk.json
@@ -2,7 +2,7 @@
   "your_profile": "Сіздің парақшаңыз",
   "guest": "Қонақ",
   "application_settings": "Баптаулар",
-  "rate_share": "Бағалау және бөлісу",
+  "rate_share": "Бағалау",
   "other": "Басқа",
   "notifications_settings_button_label": "Хабарландыру баптаулары",
   "rate_us_button_label": "Бізге баға беріңіз",
