--- a/src/blocks/UserProfile/locales/ru.json
+++ b/src/blocks/UserProfile/locales/ru.json
@@ -2,7 +2,7 @@
   "your_profile": "Ваш профиль",
   "guest": "Гость",
   "application_settings": "Настройки",
-  "rate_share": "Оценить и поделиться",
+  "rate_share": "Оценить",
   "other": "Другое",
   "notifications_settings_button_label": "Настройки уведомлений",
   "rate_us_button_label": "Дайте нам оценку",
