--- a/src/pages/Consultation/locales/kk.json
+++ b/src/pages/Consultation/locales/kk.json
@@ -11,5 +11,9 @@
   "client_camera_on": "Клиент камераны қосты",
   "client_microphone_off": "Клиент микрофонды өшірді",
   "client_microphone_on": "Клиент микрофонды қосты",
-  "show_system_messages": "Show system messagesKK"
+  "show_system_messages": "Show system messagesKK",
+  "show_previous_consultations": "Show previous consultationsKK",
+  "hide_options": "Hide optionsKK",
+  "show_options": "Show optionsKK",
+  "search": "SearchKK"
 }
