--- a/src/pages/Consultation/locales/kk.json
+++ b/src/pages/Consultation/locales/kk.json
@@ -15,5 +15,5 @@
   "show_previous_consultations": "Show previous consultationsKK",
   "hide_options": "Hide optionsKK",
   "show_options": "Show optionsKK",
-  "search": "SearchKK"
+  "search": "Іздеу"
 }
