Add: pass the earliest available slot of the provider to the ProviderOverview component, and also add translations

--- a/src/blocks/SelectProvider/locales/en.json
+++ b/src/blocks/SelectProvider/locales/en.json
@@ -4,5 +4,13 @@
   "psychotherapist": "Psychotherapist",
   "no_match": "No providers matching your criteria",
   "free": "Free",
-  "coupon": "Coupon"
+  "coupon": "Coupon",
+  "earliest_available_slot": "First available consultation:",
+  "sunday": "Sun",
+  "monday": "Mon",
+  "tuesday": "Tue",
+  "wednesday": "Wed",
+  "thursday": "Thu",
+  "friday": "Fri",
+  "saturday": "Sat"
 }
