--- a/src/blocks/SelectProvider/locales/kk.json
+++ b/src/blocks/SelectProvider/locales/kk.json
@@ -4,5 +4,13 @@
   "psychotherapist": "Психотерапевт",
   "no_match": "Талаптарыңызға сай келетін консультанттар жоқ",
   "free": "Бос",
-  "coupon": "Купон"
+  "coupon": "Купон",
+  "earliest_available_slot": "Бірінші қолжетімді консультация:",
+  "sunday": "Жс",
+  "monday": "Дс",
+  "tuesday": "Сс",
+  "wednesday": "Ср",
+  "thursday": "Бс",
+  "friday": "Жм",
+  "saturday": "Сб"
 }
