--- a/src/blocks/PaymentHistory/locales/en.json
+++ b/src/blocks/PaymentHistory/locales/en.json
@@ -3,7 +3,7 @@
   "price": "Price",
   "date_of_payment": "Date of payment",
   "more_details": "More details",
-  "no_data_found": "You don't have any payments history yet",
+  "no_data_found": "You don't have any payments yet",
   "text_audio_video_consultation": "Online consultation",
   "export_label": "Export"
 }
