--- a/src/backdrops/SelectConsultation/locales/kk.json
+++ b/src/backdrops/SelectConsultation/locales/kk.json
@@ -17,11 +17,14 @@
   "october": "қазан",
   "november": "қараша",
   "december": "желтоқсан",
-  "su":	"Жс",
-  "mo":	"Дс",
-  "tu":	"Сс",
-  "we":	"Ср",
-  "th":	"Бс",
-  "fr":	"Жм",
-  "sa":	"Сб"
+  "su": "Жс",
+  "mo": "Дс",
+  "tu": "Сс",
+  "we": "Ср",
+  "th": "Бс",
+  "fr": "Жм",
+  "sa": "Сб",
+  "coupon_code": "Купон коды",
+  "apply_coupon": "Apply coupon",
+  "remove_coupon": "Купонды жою"
 }
