--- a/src/backdrops/SelectConsultation/locales/ru.json
+++ b/src/backdrops/SelectConsultation/locales/ru.json
@@ -17,11 +17,14 @@
   "october": "октябрь",
   "november": "ноябрь",
   "december": "декабрь",
-  "su":	"Вс",
-  "mo":	"Пн",
-  "tu":	"Вт",
-  "we":	"Ср",
-  "th":	"Чт",
-  "fr":	"Пт",
-  "sa":	"Сб"
+  "su": "Вс",
+  "mo": "Пн",
+  "tu": "Вт",
+  "we": "Ср",
+  "th": "Чт",
+  "fr": "Пт",
+  "sa": "Сб",
+  "coupon_code": "Код купона",
+  "apply_coupon": "Apply coupon",
+  "remove_coupon": "Удалить купон"
 }
