--- a/src/blocks/GiveSuggestion/locales/kk.json
+++ b/src/blocks/GiveSuggestion/locales/kk.json
@@ -8,5 +8,5 @@
   "modal_text": "Іздегеніңізді таба алмағаныңызға қатты өкінеміз. Біз Сіздің ұсынысыңызды мүмкіндігінше тезірек қарастыруға тырысамыз. Пікіріңізге рахмет.",
   "modal_cta_label": "Басқа мақалалармен танысып шығыңыз",
 
-  "error": "Please enter your sugestion"
+  "error": "Өтінеміз, ұсынысыңызды енгізіңіз"
 }
