--- a/src/blocks/GiveSuggestion/locales/ru.json
+++ b/src/blocks/GiveSuggestion/locales/ru.json
@@ -8,6 +8,6 @@
   "modal_text": "Нам очень жаль, что Вы не смогли найти то, что искали. Мы постараемся рассмотреть Ваше предложение как можно скорее. Спасибо за обратную связь.",
   "modal_cta_label": "Ознакомьтесь с другими статьями",
 
-  "error": "Please enter your sugestion"
+  "error": "Пожалуйста, введите Ваше предложение"
   
 }
