--- a/src/blocks/NotificationPreferences/locales/ru.json
+++ b/src/blocks/NotificationPreferences/locales/ru.json
@@ -2,5 +2,5 @@
   "email": "Уведомления по электронной почте",
   "appointment": "Уведомления о встречах",
   "minutes_before": "минут до",
-  "success": "Settings saved successfullyRU"
+  "success": "Настройки уведомлений успешно сохранены"
 }
