--- a/src/blocks/RegisterEmail/locales/kk.json
+++ b/src/blocks/RegisterEmail/locales/kk.json
@@ -1,6 +1,6 @@
 {
   "email_error": "Өтінеміз қолданыстағы электронды поштаңызды енгізіңіз",
-  "password_error": "Кілтсөз кемінде 8 таңбадан, 1 бас әріптен, 1 кіші әріптен және 1 саннан тұруы керек.",
+  "password_error": "Құпия сөз кемінде 8 таңбадан, 1 бас әріптен, 1 кіші әріптен және 1 саннан тұруы керек.",
   "email_label": "Электронды пошта *",
   "nickname_label": "Лақап аты *",
   "nickname_placeholder": "Лақап атыңызды енгізіңіз",
