--- a/src/modals/RequireDataAgreement/locales/ru.json
+++ b/src/modals/RequireDataAgreement/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "heading": "Даете ли Вы нам разрешение на обработку своих персональных данных?",
   "text": "Ваша личная информация не будет раскрыта, это разрешение будет использоваться только для обработки и хранения на платформе клинических данных и истории чатов.",
-  "text2": "Прежде чем давать разрешение, Вы можете ознакомиться с ",
+  "text2": "Если Вы хотите узнать больше о том, как мы обрабатываем персональные данные, ознакомтесь с нашей",
   "terms": "Условия и положения",
   "give_permission": "Дать разрешение",
   "privacy_policy": "Политика конфиденциальности",
