--- a/src/pages/Consultation/locales/ru.json
+++ b/src/pages/Consultation/locales/ru.json
@@ -11,7 +11,7 @@
   "client_camera_on": "Клиент включил камеру",
   "client_microphone_off": "Клиент выключил микрофон",
   "client_microphone_on": "Клиент включил микрофон",
-  "show_system_messages": "Show system messagesRU",
+  "show_system_messages": "Показать системные сообщения",
   "show_previous_consultations": "Show previous consultationsRU",
   "hide_options": "Hide optionsRU",
   "show_options": "Show optionsRU",
