--- a/src/pages/InformationPortal/locales/kk.json
+++ b/src/pages/InformationPortal/locales/kk.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Ақпараттық портал",
+  "heading": "Құпия сөзді өзгерту",
   "subheading": "Мұнда Сіз психикалық денсаулығыңызды жақсарту үшін қажеттінің бәрін біле аласыз",
   "heading_newest": "Соңғы мақалалар",
   "heading_popular": "Ең танымал",
