--- a/src/backdrops/FilterProviders/locales/kk.json
+++ b/src/backdrops/FilterProviders/locales/kk.json
@@ -15,5 +15,7 @@
   "language_placeholder": "Тілді таңдаңыз",
   "providers_free_consultation_label": "Тек тегін консультация",
   "button_label": "Сүзгілерді қолданыңыз",
-  "reset_filter": "Сүзгілерді қалпына келтіру"
+  "reset_filter": "Сүзгілерді қалпына келтіру",
+  "available_before": "Дейін қол жетімді",
+  "available_after": "Кейін қол жетімді"
 }
