--- a/src/blocks/ForgotPassword/locales/kk.json
+++ b/src/blocks/ForgotPassword/locales/kk.json
@@ -1,8 +1,8 @@
 {
   "error_email_message": "Өтінеміз, электрондық поштаңызды енгізіңіз",
   "input_email_label": "Электронды пошта",
-  "reset_password_button_label": "Кілтсөзді өзгерту",
+  "reset_password_button_label": "Құпия сөзді өзгерту",
   "register_redirect_button_label": "Менде аккаунт жоқ",
   "modal_heading": "Электронды поштаңызды тексеріңіз",
-  "modal_text": "If you are registered in the platform you will receive a link to reset your password.KK"
+  "modal_text": "Егер Сіз платформада тіркелген болсаңыз, құпия сөзді қалпына келтіруге сілтеме аласыз."
 }
