--- a/src/blocks/ForgotPassword/locales/ru.json
+++ b/src/blocks/ForgotPassword/locales/ru.json
@@ -4,5 +4,5 @@
   "reset_password_button_label": "Сброс пароля",
   "register_redirect_button_label": "У меня нет аккаунта",
   "modal_heading": "Проверьте свою электронную почту",
-  "modal_text": "If you are registered in the platform you will receive a link to reset your password.RU"
+  "modal_text": "Если Вы зарегистрированы на платформе, Вы получите ссылку для сброса Вашего пароля."
 }
