--- a/src/blocks/GiveSuggestion/locales/en.json
+++ b/src/blocks/GiveSuggestion/locales/en.json
@@ -8,5 +8,5 @@
   "modal_text": "We are really sorry you could not find what you were loooking for. We will try to address your suggestion as soon as possible. Thank you for your feedback.",
   "modal_cta_label": "Explore more articles",
 
-  "error": "Please enter your sugestion"
+  "error": "Please enter your suggestion"
 }
