--- a/src/blocks/MascotWelcomeHeader/locales/kk.json
+++ b/src/blocks/MascotWelcomeHeader/locales/kk.json
@@ -4,7 +4,7 @@
   "no_registration_subheading": "Қосымшаның барлық функцияларын пайдалану үшін Сізге анонимді немесе кәдімгі аккаунт қажет.",
   "create_account_button": "Аккаунт ашу",
   "next_consultation": "Келесі консультация:",
-  "change_button_label": "Кілтсөзді өзгерту",
+  "change_button_label": "Құпия сөзді өзгерту",
   "accept_button_label": "Консультацияны қабылдау",
   "join_button_label": "Қосылу",
   "schedule_button_label": "Жоспарлау",
