--- a/src/blocks/NotificationPreferences/locales/kk.json
+++ b/src/blocks/NotificationPreferences/locales/kk.json
@@ -2,5 +2,5 @@
   "email": "Электрондық пошта арқылы хабарландырулар",
   "appointment": "Кездесулер хабарландырулар",
   "minutes_before": "минут дейін",
-  "success": "Settings saved successfullyKK"
+  "success": "Хабарландыру баптаулары сәтті сақталды"
 }
