--- a/src/modals/RequireDataAgreement/locales/kk.json
+++ b/src/modals/RequireDataAgreement/locales/kk.json
@@ -1,7 +1,7 @@
 {
   "heading": "Сіз бізге дербес деректеріңізді өңдеуге рұқсат бересіз бе?",
   "text": "Сіздің жеке ақпаратыңыз ашылмайды, бұл рұқсат тек клиникалық деректер және чат тарихында өңдеу және сақтау үшін платформада пайдаланылады.",
-  "text2": "Рұқсат бермес бұрын, Сіз таныса алатын ",
+  "text2": "Егер Сіз дербес деректерді өңдеу жайлы көбірек білгіңіз келсе танысып шығыңыз - біздің ",
   "terms": "Шарттар мен ережелер",
   "privacy_policy": "Құпиялық саясаты",
   "give_permission": "Рұқсат беру",
