--- a/src/blocks/RegisterAnonymous/locales/kk.json
+++ b/src/blocks/RegisterAnonymous/locales/kk.json
@@ -12,5 +12,7 @@
   "register_button_label": "Тіркелу",
   "login_button_label": "Менің аккаунтым бар",
   "copy_text": "Анонимді кодты көшіріп алып, сақтап қойыңыз немесе жазып алыңыз, егер оны жоғалтып алсаңыз, аккаунтыңызға кіре алмайсыз.",
-  "copy_success": "Сәтті көшірілген код"
+  "copy_success": "Сәтті көшірілген код",
+  "confirm_password_label": "Құпия сөзді растаңыз",
+  "password_match_error": "Құпия сөз және Құпия сөзді растау өрістері сәйкес келмейді"
 }
