--- a/src/blocks/RegisterAnonymous/locales/ru.json
+++ b/src/blocks/RegisterAnonymous/locales/ru.json
@@ -12,5 +12,7 @@
   "register_button_label": "Зарегистрироваться",
   "login_button_label": "У меня уже есть аккаунт",
   "copy_text": "Скопируйте и сохраните или запишите свой анонимный код, если Вы его потеряете, то больше не сможете получить доступ к своему аккаунту.",
-  "copy_success": "Успешно скопированный код"
+  "copy_success": "Успешно скопированный код",
+  "confirm_password_label": "Подтвердите пароль",
+  "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают"
 }
