--- a/src/backdrops/SelectConsultation/locales/ru.json
+++ b/src/backdrops/SelectConsultation/locales/ru.json
@@ -25,6 +25,6 @@
   "fr": "Пт",
   "sa": "Сб",
   "coupon_code": "Код купона",
-  "apply_coupon": "Apply coupon",
+  "apply_coupon": "Apply couponRU",
   "remove_coupon": "Удалить купон"
 }
