--- a/src/pages/Consultations/locales/kk.json
+++ b/src/pages/Consultations/locales/kk.json
@@ -1,4 +1,6 @@
 {
-    "header": "Консультациялар",
-    "button_label": "Консультацияны жоспарлау"
+  "header": "Консультациялар",
+  "button_label": "Консультацияны жоспарлау",
+  "reject_consultation_success": "Консультациядан сәтті бас тарттыңыз",
+  "accept_consultation_success": "Консультация сәтті қабылданды"
 }
