--- a/src/pages/Consultations/locales/ru.json
+++ b/src/pages/Consultations/locales/ru.json
@@ -1,4 +1,6 @@
 {
-    "header": "Консультации",
-    "button_label": "Запланировать консультацию"
+  "header": "Консультации",
+  "button_label": "Запланировать консультацию",
+  "reject_consultation_success": "Консультация успешно отклонена",
+  "accept_consultation_success": "Консультация успешно принята"
 }
