--- a/src/backdrops/SelectConsultation/locales/kk.json
+++ b/src/backdrops/SelectConsultation/locales/kk.json
@@ -25,6 +25,6 @@
   "fr": "Жм",
   "sa": "Сб",
   "coupon_code": "Купон коды",
-  "apply_coupon": "Apply couponKK",
+  "apply_coupon": "Купонды қолдану",
   "remove_coupon": "Купонды жою"
 }
