--- a/src/blocks/PaymentHistory/locales/kk.json
+++ b/src/blocks/PaymentHistory/locales/kk.json
@@ -3,7 +3,7 @@
   "price": "Бағасы",
   "date_of_payment": "Төлем күні",
   "more_details": "Толығырақ ақпарат",
-  "no_data_found": "Сізде әлі төлем тарихы жоқ",
+  "no_data_found": "Сізде әлі төлемдер жоқ",
   "text_audio_video_consultation": "Онлайн консультациялар",
   "export_label": "Экспорт"
 }
