Add: link to faq in the footer and multiple translations

--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -11,6 +11,7 @@
   "footer_5": "Terms and Conditions",
   "footer_6": "Privacy Policy",
   "footer_7": "Cookie Settings",
+  "footer_8": "FAQ",
 
   "emergency_button": "SOS Center",
 
