--- a/src/blocks/Page/locales/kk.json
+++ b/src/blocks/Page/locales/kk.json
@@ -11,6 +11,7 @@
   "footer_5": "Шарттар мен ережелер",
   "footer_6": "Құпиялық саясаты",
   "footer_7": "Cookie файлдарының баптаулары",
+  "footer_8": "Жиі қойылатын сұрақтар",
 
   "emergency_button": "SOS-орталық",
 
