--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -11,6 +11,7 @@
   "footer_5": "Условия и положения",
   "footer_6": "Политика конфиденциальности",
   "footer_7": "Настройки файлов cookie",
+  "footer_8": "Часто задаваемые вопросы",
 
   "emergency_button": "SOS-центр",
 
