--- a/src/blocks/RegisterPreview/locales/en.json
+++ b/src/blocks/RegisterPreview/locales/en.json
@@ -8,5 +8,5 @@
   "text_2": "USupport provides personalized, discreet and fast psychological care for your overall well-being.",
   "heading_3": "About you",
   "text_3": "Your story matters! Dare to share it.",
-  "login": "Login to the app"
+  "login": "Login with Email/Access Token"
 }
