--- a/src/blocks/RegisterPreview/locales/ru.json
+++ b/src/blocks/RegisterPreview/locales/ru.json
@@ -8,5 +8,5 @@
   "text_2": "USupport предоставляет персонализированную, ненавязчивую и быструю психологическую помощь для вашего общего благополучия.",
   "heading_3": "О Вас",
   "text_3": "Ваша история имеет значение! Смело делитесь.",
-  "login": "Войти в приложение"
+  "login": "Login with Email/Access TokenRU"
 }
