--- a/src/pages/Consultation/locales/en.json
+++ b/src/pages/Consultation/locales/en.json
@@ -23,8 +23,8 @@
 
   "show_system_messages": "Show system messages",
   "show_previous_consultations": "Show previous consultations",
-  "hide_options": "Hide options",
-  "show_options": "Show options",
+  "hide_options": "Hide settings",
+  "show_options": "Settings",
   "search": "Search",
   "sponsored_by": "This session is sponsored by: ",
   "consultation_end_reminder": "Your consultation will end in {{minutes}} minutes"
