--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -8,7 +8,7 @@
   "footer_2": "Consultations",
   "footer_3": "Information portal",
   "footer_4": "Your profile",
-  "footer_5": "Terms and Conditions",
+  "footer_5": "Terms of Use",
   "footer_6": "Privacy Policy",
   "footer_7": "Cookie Settings",
   "footer_8": "FAQ",
