--- a/src/blocks/UserDetails/locales/en.json
+++ b/src/blocks/UserDetails/locales/en.json
@@ -18,7 +18,7 @@
   "button_text": "Save changes",
   "button_secondary_text": "Discard changes",
   "privacy": "Privacy and security",
-  "consent": "Consent for personal data processing",
+  "consent": "Consent for personal data usage as defined by the <0>Privacy Policy</0>",
   "change_password": "Change password",
   "delete_account": "Delete account",
   "logout": "Logout",
@@ -31,7 +31,7 @@
   "sex_none": "Prefer not to say",
   "place_of_living_urban": "Urban",
   "place_of_living_rural": "Rural",
-  "data_processing_modal_heading": "Are you sure you want to remove the permission to process your personal data?",
+  "data_processing_modal_heading": "Are you sure you want to remove the permission to use your personal data as defined by the <0>Privacy Policy</0>?",
   "data_processing_modal_text": "You will not be able to schedule further consultations.",
   "data_processing_modal_confirm_button": "Remove permission",
   "data_processing_modal_cancel_button": "Cancel",
