--- a/src/modals/RequireDataAgreement/locales/en.json
+++ b/src/modals/RequireDataAgreement/locales/en.json
@@ -2,7 +2,7 @@
   "heading": "Do you give us permission to use your data as defined by the privacy policy?",
   "text": "Your personal information will not be exposed, this permission will be used only for medical data and chat history to be proccesed and stored in the platform.",
   "text2": "If you would like to learn more about how we process personal data, please visit our ",
-  "terms": "Terms and conditions.",
+  "terms": "Terms of Use.",
   "privacy_policy": "Privacy policy",
   "give_permission": "Give permission",
   "cancel": "Cancel"
